--- a/ind.html
+++ b/ind.html
@@ -10,6 +10,7 @@
   <script src="https://smtpjs.com/v3/smtp.js">
   </script>
   <style media="screen">
+
     .checker {
       position: absolute;
       right: 10%;
@@ -189,7 +190,7 @@
     }
 
     .sp-container {
-      height:120rem;
+      height:100%;
       width:100%;
       background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('https://images.unsplash.com/photo-1524368535928-5b5e00ddc76b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
       background-repeat: no-repeat;
@@ -854,7 +855,7 @@
 </head>
 
 <body>
-  <section class="loading" style="position:relative;display:flex; justify-content:center; align-items: center;background-color:black; width:100%; height:100%;">
+  <section class="loading" style="position:relative; top: 40%;display:flex; justify-content:center; align-items:center; background-color:black; width:100%;">
     <span class="loader-19"></span>
     <img style="width:100px; position:absolute;" src="logo.png" alt="logo-loader">
   </section>
@@ -863,6 +864,7 @@
     <h2 class="frame-2">TEXARITA</h2>
   </div>
 
+  <div class="area">
     <div class="container">
       <div class="text">
         <img class="event-pic" style="width:300px; cursor:pointer;" src="event.png" alt="event-name">
@@ -1036,7 +1038,7 @@
       </form>
     </div>
   </div>
-
+  </div>
 
 
   <script type="text/javascript">
@@ -1066,7 +1068,7 @@
       $(".pinfo").fadeOut(1);
       $(".qinfo").fadeOut(1);
       $(".oinfo").fadeOut(1);
-
+      $("body").css("background-color","black");
       setTimeout(function() {
         $(".loading").fadeOut("slow", function() {
           $(".loading").hide(function() {
@@ -1074,6 +1076,7 @@
               setTimeout(function() {
                 $(".sp-container").fadeIn();
                 $(".sp-container").hide(function() {
+                  $("body").css("background-color","white");
                   $(".container").fadeIn("slow", function() {
                     $(".main").fadeIn(1);
                     $(".register").fadeIn(1);
