--- a/ind.html
+++ b/ind.html
@@ -190,7 +190,7 @@
     }
 
     .sp-container {
-      height:100%;
+      height:110rem;
       width:100%;
       background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('https://images.unsplash.com/photo-1524368535928-5b5e00ddc76b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
       background-repeat: no-repeat;
