--- a/ind.html
+++ b/ind.html
@@ -38,7 +38,7 @@
     input[type='checkbox']+label {
       position: relative;
       display: flex;
-      margin: 0.6rem;
+      margin: 1rem;
       align-items: center;
       color: #9e9e9e;
       transition: color 250ms cubic-bezier(.4, .0, .23, 1);
@@ -1012,25 +1012,22 @@
           </div>
       </div>
       <div class="checker">
-        <input id='one' name="paper" type='checkbox' />
+        <input style="display:none;" id='one' name="paper" type='checkbox' />
         <label for='one'>
           <span></span>
           Paper Presentaion
-          <ins><i>Paper Presentaion</i></ins>
         </label>
-        <input id='two' name="quiz" type='checkbox' />
+        <input style="display:none;" id='two' name="quiz" type='checkbox' />
         <label for='two'>
           <span></span>
           Quiz
-          <ins><i>Quiz</i></ins>
         </label>
-        <input id='three' name="photo" type='checkbox' />
+        <input style="display:none;" id='three' name="photo" type='checkbox' />
         <label for='three'>
           <span></span>
           Photography
-          <ins><i>Photography</i></ins>
         </label>
-        <input id='four' name="photo" type='checkbox' />
+        <input style="display:none;" id='four' name="photo" type='checkbox' />
         <label for='four'>
         </label>
       </div>
