--- a/ind.html
+++ b/ind.html
@@ -99,8 +99,8 @@
     input[type='checkbox']:checked+label>span:before {
       content: "";
       position: absolute;
-      top: .6em;
-      left: .2em;
+      top: 1em;
+      left: 1em;
       border-right: 3px solid transparent;
       border-bottom: 3px solid transparent;
       transform: rotate(45deg);
