--- a/ind.html
+++ b/ind.html
@@ -40,7 +40,7 @@
       display: flex;
       margin: 1rem;
       align-items: center;
-      color: #9e9e9e;
+      color: chocolate;
       transition: color 250ms cubic-bezier(.4, .0, .23, 1);
     }
 
@@ -92,15 +92,15 @@
     }
 
     input[type='checkbox']:checked+label>span {
-      border: .5em solid #FFEB3B;
+      border: .3em solid #FFEB3B;
       animation: shrink-bounce 200ms cubic-bezier(.4, .0, .23, 1);
     }
 
     input[type='checkbox']:checked+label>span:before {
       content: "";
       position: absolute;
-      top: 1em;
-      left: 1em;
+      top: 0.8em;
+      left: 0.4em;
       border-right: 3px solid transparent;
       border-bottom: 3px solid transparent;
       transform: rotate(45deg);
@@ -139,7 +139,7 @@
       100% {
         width: .2em;
         height: .5em;
-        border-color: #212121;
+        border-color: blue;
         transform: translate3d(0, -.5em, 0) rotate(45deg);
       }
     }
