--- a/ind.html
+++ b/ind.html
@@ -855,7 +855,7 @@
 </head>
 
 <body>
-  <section class="loading" style="position:relative; top: 40%;display:flex; justify-content:center; align-items:center; background-color:black; width:100%;">
+  <section class="loading" style="position:relative;display:flex; justify-content:center; align-items:center; background-color:black; width:100%;">
     <span class="loader-19"></span>
     <img style="width:100px; position:absolute;" src="logo.png" alt="logo-loader">
   </section>
