--- a/ind.html
+++ b/ind.html
@@ -313,8 +313,8 @@
     }
 
     .sp-container {
-      height:100%;
       width:100%;
+      height:100vh;
       background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('https://images.unsplash.com/photo-1524368535928-5b5e00ddc76b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
       background-repeat: no-repeat;
       background-size: cover;
@@ -911,7 +911,7 @@
 
           </p>
           <div class="" style="position:absolute; width:140px; top:70%; left:10%; ">
-            <h3 style="color:white; padding:7%; ">PAVITHRA K L V</h3>
+            <h3 style="color:white; padding:7%; ">PAVITHRA K L</h3>
             <p style="left:10%;">7867897978</p>
           </div>
           <div class="" style="position:absolute; width:180px; top:70%; left:70%; ">
@@ -1062,7 +1062,7 @@
   <h3 style="color:white; padding:4%; ">Organizing Secretary</h3>
   <p style="left:10%;"><strong>Dr.V Thanabal</strong></p><br>
     <p style="left:7%;">Associate Professor</p><br>
-  <p style="left:-9%;"><strong>Dr.M Janarthanan    </strong><strong>       Mr.V Thirumurugan</strong></p>
+  <p style="left:-9%;"><strong>Dr.M Janarthanan</strong>,<strong>Mr.V Thirumurugan</strong></p>
     <p style="left:7%;">Assistant Professor</p>
   </div>
 </div>
@@ -1073,23 +1073,23 @@
     height:245px;">
   <h3 style="color:white; position:relative; left:35%; display:inline-block; margin:3%;">Students Co-Ordinators</h3><br>
 <div class="" style="position:absolute; left:2%; width:150px;">
-  <h3 style="color:white; padding:7%; ">KEERTHISIVA V</h3>
+  <h3 style="color:white; margin: 0; font-size: 15px;padding:7%; ">KEERTHISIVA V</h3>
   <p style="left:10%;">8973580814</p>
 </div>
-<div class="" style="position:absolute; left:37%; width:190px;">
-  <h3 style="color:white; padding:7%; ">HARIHARA SUDHAN G</h3>
+<div class="" style="position:absolute; left:37%; width:200px;">
+  <h3 style="color:white; margin: 0; font-size: 15px;  padding:7%; ">HARIHARA SUDHAN G</h3>
   <p style="left:20%;">7845124240</p>
 </div>
 <div class="" style="position:absolute; left:80%; width:110px;">
-  <h3 style="color:white; padding:7%; ">AJAY A</h3>
-  <p style="left:-8%;">9047018760</p>
+  <h3 style="color:white; padding:7%; margin: 0; font-size: 15px; ">AJAY A</h3>
+  <p style="left:1%;">9047018760</p>
 </div>
   </div>
 <div class=""  style="position:relative; top:25%; height:109px;">
   <div class="" style="position:absolute; left:45%; width:147px;">
-    <h1 style="color:white; display:inline-block; padding:2%;">MADE WITH LOVE</h1><br>
+    <h1 style="color:white; display:inline-block; margin: 0;padding:2%;">MADE WITH LOVE</h1><br>
     <p style="color:white; left:45px; padding:2%;">By</p><br>
-    <h3 style="color:white;padding:2%;  display:inline-block;">P.SUJANPRAKASH</h3><a href="mailto:sujanprakashp1234@gmail.com"><img style="position: absolute;
+    <h3 style="color:white;padding:2%; margin: 0; display:inline-block;">P.SUJANPRAKASH</h3><a href="mailto:sujanprakashp1234@gmail.com"><img style="position: absolute;
     /* margin: -2%; */
     padding: 7px;
     padding-top: 0px;
