--- a/ind.html
+++ b/ind.html
@@ -830,7 +830,8 @@
 </head>
 
 <body>
-  <section class="loading" style="position:relative;display:flex; justify-content:center; top:40%;align-items:center; background-color:black; width:100%;">
+  <section class="loading" style="top:40%; position:relative;display:flex; justify-content:center;
+  align-items:center; background-color:black; width:100%;">
     <span class="loader-19"></span>
     <img style="width:100px; position:absolute;" src="logo.png" alt="logo-loader">
   </section>
@@ -838,10 +839,6 @@
     <h2 class="frame-1"><span class="hs" style="color:#00bcd4">B</span>IT</h2>
     <h2 class="frame-2"><span class="hs1" style="color:red">T</span>EXARITA</h2>
   </div>
-
-  <div class="area" style=" width: 100%;
-      height: 100%;
-      overflow-y: scroll;">
     <div class="container">
       <div class="text">
         <img class="event-pic" style="width:300px; cursor:pointer;" src="event.png" alt="event-name">
@@ -1097,10 +1094,6 @@
     width: 46px;" src="mi.png" alt="mi"></a>
     <p style="left:15%;">8220220508</p>
   </div>
-</div>
-
-
-
 </div>
   </div>
 
