--- a/ind.html
+++ b/ind.html
@@ -137,10 +137,11 @@
   .login-wrap{
   width:100%;
   margin:auto;
-  max-width:525px;
+  max-width:700px;
   min-height:750px;
   position:relative;
   background:url('https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg') no-repeat center;
+  background-size: cover;
   box-shadow: 0px -1px 134px black, 0px 15px 42px black;
   }
 
@@ -148,7 +149,6 @@
   width:100%;
   height:100%;
   position:absolute;
-  padding:90px 70px 50px 70px;
   background:rgba(40,57,101,.9);
   }
   .login-html .sign-up-htm{
@@ -174,7 +174,8 @@
   font-size:35px;
   border: 25px dashed black;
       padding: 50px;
-      margin: 14%;
+      margin: 31%;
+      cursor: pointer;
   display:inline-block;
   transition: all 1s linear;
   }
