--- a/ind.html
+++ b/ind.html
@@ -200,7 +200,7 @@
   .login-form .group .label,
   .login-form .group .input,
   .login-form .group .button{
-  width:100%;
+  width:50%;
   color:#fff;
   display:block;
   }
@@ -1084,14 +1084,15 @@
 </div>
   </div>
 <div class=""  style="position:relative; top:25%; height:109px;">
-  <div class="" style="position:absolute; left:45%; width:147px;">
-    <h1 style="color:white; display:inline-block; margin: 0;padding:2%;">MADE WITH LOVE</h1><br>
-    <p style="color:white; left:45px; padding:2%;">By</p><br>
+  <div class="" style="position:absolute; left:45%; width:176px;">
+    <h1 style="color:white; display:inline-block; margin: 0; font-size: 15px;padding:2%;">MADE WITH LOVE</h1><br>
+    <p style="color:white; left:59px; padding:2%;">By</p><br>
     <h3 style="color:white;padding:2%; margin: 0; display:inline-block;">P.SUJANPRAKASH</h3><a href="mailto:sujanprakashp1234@gmail.com"><img style="position: absolute;
     /* margin: -2%; */
     padding: 7px;
     padding-top: 0px;
     top: 36%;
+    left: 100%;
     width: 46px;" src="mi.png" alt="mi"></a>
     <p style="left:15%;">8220220508</p>
   </div>
