--- a/ind.html
+++ b/ind.html
@@ -146,6 +146,7 @@
   }
 
   .login-html{
+    overflow: hidden;
   width:100%;
   height:100%;
   position:absolute;
@@ -190,6 +191,8 @@
 
   .login-form{
   min-height:345px;
+  width: 737px;
+  margin: 0 18%;
   position:relative;
   perspective:1000px;
   transform-style:preserve-3d;
@@ -1007,6 +1010,10 @@
           <div class="group">
             <label for="pass" class="label">Ref.Number</label>
             <input id="pass" type="text" name="rnum" class="input">
+          </div>
+          <div class="group">
+            <label for="pass" class="label">Gpay.Number</label>
+            <input id="pass" type="text" name="rnum" class="input" value="8973580814">
           </div>
           <div class="group">
             <div class="checker">
