--- a/ind.html
+++ b/ind.html
@@ -325,7 +325,7 @@
     }
 
     .sp-container {
-      width:100%;
+      width:100vh;
       height:100vh;
       background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('https://images.unsplash.com/photo-1524368535928-5b5e00ddc76b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
       background-repeat: no-repeat;
@@ -474,7 +474,7 @@
       position: absolute;
       display: inline;
       top: 25%;
-      left: 40%;
+      left: 35%;
       transition: all 1s linear;
     }
 
@@ -1069,7 +1069,7 @@
   <h1 class="suc" style="color:white; margin:1%; font-family: 'Fredoka One', cursive;  position:absolute; display: none;
   top:40%; font-size:45px">Thank You for Registering ❤️ </h1>
 </div>
-<div class="footer" style="width:100%; height:930px; margin-top:2%; background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),url('https://images.pexels.com/photos/2387793/pexels-photo-2387793.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260');
+<div class="footer" style="width:100%; height:960px; margin-top:2%; background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('https://images.pexels.com/photos/2387793/pexels-photo-2387793.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260');
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
