--- a/ind.html
+++ b/ind.html
@@ -325,7 +325,7 @@
     }
 
     .sp-container {
-      width:100vh;
+      width:100%;
       height:100vh;
       background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('https://images.unsplash.com/photo-1524368535928-5b5e00ddc76b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
       background-repeat: no-repeat;
@@ -1014,7 +1014,7 @@
     <input id="tab-2"  type="radio" name="tab" class="sign-up"><label style="color:darkgrey; font-family: 'Libre Baskerville', serif;" for="tab-2" class="tab">REGISTER</label>
     <div class="login-form">
       <div class="sign-up-htm">
-        <form method="post" autocomplete="off" name="google-sheet">
+        <form method="post" autocomplete="off" name="google-sheet" action="https://sujan2001.github.io/texarita/ind.html">
           <div class="group">
             <label for="user" class="label">Name</label>
             <input id="user" name="name" type="text" class="input">
