--- a/ind.html
+++ b/ind.html
@@ -480,7 +480,7 @@
 
     .container:hover .text {
       top: 10%;
-      left: 40%;
+      left: 30%;
     }
 
     .main {
@@ -868,7 +868,7 @@
         <img class="event-pic" style="width:400px; cursor:pointer;" src="event.png" alt="event-name">
       </div>
       <div class="line">
-        <h1 style="color:white; font-size:60px; margin-bottom: 4%; font-family: 'Abril Fatface', cursive;  transition:all 1s ease;">Do <span style="color:#00bcd4; font-family: 'Abril Fatface', cursive;">something </span> for the <br><span style="color:#cf1b1b; font-family: 'Abril Fatface', cursive;">foundation </span> of your <span style="color:#6f4a8e; font-family: 'Abril Fatface', cursive;">Life.!😜</span></h1>
+        <h1 style="color:white; font-size:60px; margin-bottom: 4%; font-family: 'Abril Fatface', cursive;  transition:all 1s ease;">Do <span style="color:#00bcd4; font-family: 'Abril Fatface', cursive;">something </span> for the <br><span style="color:#519872; font-family: 'Abril Fatface', cursive;">foundation </span> of your <span style="color:#6f4a8e; font-family: 'Abril Fatface', cursive;">Life.!😜</span></h1>
         <h1 style="color:white; margin: 182px;font-size:40px; font-family: 'Sansita Swashed', cursive; color:#28df99;">Mark YouR CalendeR ---> <strong><span style="font-family: 'Sansita Swashed', cursive; color:#d7385e">07.11.2020</span></strong></h></h1>
       </div>
       <section id="section07" class="demo">
@@ -1014,7 +1014,7 @@
     <input id="tab-2"  type="radio" name="tab" class="sign-up"><label style="color:darkgrey; font-family: 'Libre Baskerville', serif;" for="tab-2" class="tab">REGISTER</label>
     <div class="login-form">
       <div class="sign-up-htm">
-        <form method="post" autocomplete="off" name="google-sheet" action="https://sujan2001.github.io/texarita/ind.html">
+        <form method="post" autocomplete="off" name="google-sheet" action="#">
           <div class="group">
             <label for="user" class="label">Name</label>
             <input id="user" name="name" type="text" class="input">
